--- a/src/app/fire-button/fire-button.component.css
+++ b/src/app/fire-button/fire-button.component.css
@@ -5,10 +5,47 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.ammoContainer {
+    box-shadow: darkslategray .0em 0em .2em;
+    border: solid 0em grey;
+    border-radius: 1em;
+    width: 10em;
+    height: 0.8em;;
+    z-index: 3;
+    position: relative;
+    margin-top: 0.5em;
+    margin-right: 1em;
+}
+
 .ammoBar {
-    border: solid black 1px;
-    margin: 0.5em 0;
-    padding: 0 0.5em;
+    z-index: 2;
+    position: relative;
+    /*margin: 0.5em 0;*/
+    padding: 0.1em 0.1em 0.08em 0em;
+    border-radius: 1em;
+    height: 0.6em;
+    width: 50%;
+}
+
+.ammoLabel {
+    position: relative;
+    margin-top: -1.1em;
+    padding-left: 0.5em;
+    z-index: 4;
+    color: rgba(0,0,0,0.5);
+    font-size: 0.75em;
+}
+
+.vacinate { 
+    background-color: lightgreen;
+}
+
+.isolate { 
+    background-color: lightblue;
+}
+
+.exterminate { 
+    background-color: lightcoral;
 }
 
 h3 {
