--- a/src/app/game-canvas/game-canvas.component.html
+++ b/src/app/game-canvas/game-canvas.component.html
@@ -1,3 +1,3 @@
 <canvas #myCanvas></canvas>
 <app-fire-button [vacineGunAmmo]="vacinateGun.ammo" [isoGunAmmo]="isolateGun.ammo" [gunGunAmmo]="exterminateGun.ammo" (fire)="fireButtonChange($event)"></app-fire-button>
-{{this.pos.toString()}}
+{{this.mainElf?.gPos.toString()}}
